# MuTap

./: .gitignore  .gitmodules  CMakeLists.txt  HANDOFF.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: ci.yml  style.yml  vdsp-derisk.yml
bench/: CMakeLists.txt  README.md  baselines.json  bench_aec.cpp  vdsp_derisk.cpp
bench/compare/: CMakeLists.txt  aec_backend.cpp  aec_backend.h  compare_driver.h  compare_main.cpp  wav.h
bench/compare/backends/: mutap_backend.cpp  mutap_backend.h  speex_backend.cpp  speex_backend.h  webrtc_backend.cpp  webrtc_backend.h
bench/compare/results/: aecmos.json  baseline.json  itu_comparison.json  nl_aecmos.json  nl_sweep.json
bench/compare/speex_config/: config.h  speexdsp_config_types.h
bench/icount/: CMakeLists.txt  icount_main.cpp
book/: book.toml
book/src/: SUMMARY.md  canceller-and-knobs.md  echo-cancellation.md  introduction.md
cmake/: arm-cortex-m55-mps3.cmake  hexagon-linux-musl.cmake
docs/: aec-audit.md  aec-comparison.md  itu-compliance.md  optimization.md
include/mutap/: fd_kalman.h  fdaf.h  fft.h  lpc.h  mutap.h  pem_afc.h  postfilter.h
notebooks/: aec_comparison.ipynb  afc_demo.ipynb  itu_comparison.ipynb  itu_compliance.ipynb
platform/: armv8m_startup.c
scripts/: icount.py
tests/: CMakeLists.txt  bare_metal_main.cpp  branchless_parity_check.cpp  test_adaptation_control.cpp  test_aec.cpp  test_closed_loop.cpp  test_fd_kalman.cpp  test_fdaf.cpp  test_fft.cpp  test_fft_backend.cpp  test_float32.cpp  test_g168.cpp  test_itu_doubletalk.cpp  test_itu_dynamics.cpp  test_itu_echo.cpp  test_itu_signals.cpp  test_lpc.cpp  test_pem_afc.cpp  test_postfilter.cpp  test_rir_fixtures.cpp
tests/fixtures/: rir_cabin.h  rir_hall.h  rir_rehearsal.h  rir_studio.h
tests/support/: closed_loop.h  echo_scenario.h  itu_chain.h  itu_levels.h  itu_signals.h
tools/audit/: probe_441.cpp  probe_aec.cpp  probe_drift_asrc.cpp
tools/capi/: CMakeLists.txt  mutap_capi.cpp  mutap_capi.h
tools/compare/: aecmos_eval.py
tools/fixtures/: make_rir_fixtures.py
tools/notebook/: CMakeLists.txt  build_afc_demo.py  build_itu_comparison.py  build_itu_compliance.py  itu_compare_dump.cpp  itu_dump.cpp
tools/qemu_insn_plugin/: insn_count.c
